# analytics-engineering-dbt

./: .env.example  .gitignore  .sqlfluff  Makefile  README.md  dbt_project.yml  packages.yml  profiles.yml.example  pyproject.toml
.github/workflows/: cd.yml  ci.yml
agent/: catalog.py  config.py  groq_client.py  prompts.py  query_agent.py  sql_guard.py
agent/db_adapters/: base.py  duckdb_adapter.py  factory.py  snowflake_adapter.py
app/: main.py
app/static/: app.js  index.html  style.css
docs/: agent.md  commands.md  duckdb-guide.md  troubleshooting.md
macros/: generate_schema_name.sql
macros/generic_tests/: test_not_negative.sql
models/marts/core/: _core__models.yml  dim_customers.sql  fct_orders.sql
models/marts/finance/: _finance__models.yml  fct_daily_revenue.sql
models/staging/: _staging__models.yml  _staging__sources.yml  stg_customers.sql  stg_orders.sql  stg_payments.sql
scripts/: snowflake_setup.sql
seeds/: raw_customers.csv  raw_orders.csv  raw_payments.csv
tests/: _tests.yml  assert_completed_orders_reconcile_with_payments.sql  assert_no_future_order_dates.sql
tests_agent/: test_catalog.py  test_db_adapters.py  test_query_agent.py  test_sql_guard.py
tests_agent/fixtures/: manifest.json
