[project]
name = "analytics-engineering-dbt"
version = "0.1.0"
description = "Analytics Engineering portfolio project: dbt + Snowflake. Layered models (staging -> intermediate -> marts), full test coverage, and dbt docs lineage as a data catalog."
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "dbt-core>=1.8,<1.9",
    "dbt-snowflake>=1.8,<1.9",
]

[project.optional-dependencies]
dev = [
    "dbt-duckdb>=1.8,<1.9",
    "sqlfluff>=3,<4",
    "sqlfluff-templater-dbt>=3,<4",
]
agent = [
    "dbt-duckdb>=1.8,<1.9",
    "requests>=2.31",
    "sqlglot>=25.0",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pytest>=8.0",
    "ruff>=0.5",
]

# This is a tool/runtime environment for dbt, not an importable Python package.
[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests_agent"]
